force-app/main/default/objects/BLN_MDMFieldMapping__mdt/BLN_MDMFieldMapping__mdt.object-meta.xml
<CustomObject>
    <label>BLN_MDMFieldMapping</label>
    <pluralLabel>BLN_MDMFieldMapping</pluralLabel>
</CustomObject>