force-app/main/default/objects/BLN_MDMFieldMapping__mdt/fields/BLN_FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>BLN_FieldAPIName__c</fullName>
    <label>Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>