force-app/main/default/objects/BLN_MDMFieldMapping__mdt/fields/BLN_MDMFieldLabel__c.field-meta.xml
<CustomField>
    <fullName>BLN_MDMFieldLabel__c</fullName>
    <label>MDM Field Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>