force-app/main/default/objects/BLN_MDMFieldMapping__mdt/fields/BLN_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>BLN_ObjectName__c</fullName>
    <label>BLN_ObjectName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>